@@ -1,5 +1,10 @@
 2011-09-02  Guillaume Lazzara  <z@lrde.epita.fr>
 
+	* mln/debug/println_with_border.spe.hh: Improve output for 3D
+	images.
+
+2011-09-02  Guillaume Lazzara  <z@lrde.epita.fr>
+
 	Add vbbox() method.
 
 	* mln/core/image/image1d.hh,
